--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "sass": "^1.54.5",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
+    "typescript": "^4.8.2",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
+  },
+  "dependencies": {
+    "luxon": "^3.0.3"
   }
 }
