--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "deploy": "rm -fr ./dist && npm run build:prod && gh-pages -d dist"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
